--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-align: center;
 
     /* debugging */
     border: 1px solid green;
@@ -24,7 +25,11 @@ button {
     background-color: black;
     color: whitesmoke;
     font-size: 1.3em;
-    
+    text-align: center;
+}
+/* global styling */
+.hidden {
+    display: none;
 }
 /* ------------------------ */
 /* Outer Container Section */
